--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@id/todo_list">
 
     <CheckBox
         android:id="@+id/check"
@@ -14,7 +15,7 @@
         android:layout_height="wrap_content" />
 
     <Button
-        android:id="@+id/delete"
+        android:id="@+id/remove"
         android:text="@string/delete_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
